# proxy-load

./: .gitignore  README.md  app.js  package-lock.json  package.json  proxyServer.js  temp.txt  tsconfig.json  version.js  version.txt
.github/workflows/: release.yml
public/: index.html
public/css/: index.css
public/js/: index.js
scripts/: collect-release-artifacts.mjs
src/: configManager.js  constants.js  database.js  logger.js  proxyTester.js  scheduler.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: api.rs  commands.rs  database.rs  main.rs  models.rs  proxy.rs  proxy_tester.rs  state.rs  version.rs
src/proxy/: ConnectionPool.js  DomainMatcher.js  ProxyLoadBalancer.js  algorithms.js  health.js  protocols.js  utils.js
src/routes/: advancedConfig.js  dns.js  proxies.js  proxyGroups.js  settings.js  stats.js  version.js
web/: index.html  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/dialogs/: about-dialog.tsx  advanced-dialog.tsx  dns-dialog.tsx  proxy-dialog.tsx
web/src/components/layout/: metric-bar.tsx
web/src/components/sections/: dns-section.tsx  load-settings-section.tsx  proxies-section.tsx  status-section.tsx  transfer-section.tsx
web/src/components/ui/: accordion.tsx  field.tsx  sidebar.tsx
web/src/lib/: api.ts  constants.ts  update-preferences.ts
